--- a/src/style.scss
+++ b/src/style.scss
@@ -13,23 +13,199 @@ a:hover{text-decoration: none;}
 ul li{list-style: none;}
 img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 .text_blue{ 
     color: rgba(75, 92, 169, 1);
     font-weight: 600;
     font-size: 24px;
+    text-transform: uppercase;
+    letter-spacing: 5px;
    }
 .text_white {
        color:white;
 }
-
+.text_black{ 
+    color: black;
+}
+.text_bluesmall {
+    color: rgba(75, 92, 169, 1);
+    font-weight: 600;
+}
+.bold {
+    font-weight: bold;
+}
+.Container {
+    font-weight: 500;
+    display: flex;
+    // justify-content: space-around;
+    font-family: 'Montserrat', sans-serif;
+}
+.fz26 {
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 2px;
+    font-size: 26px;
+    text-align: left;
+    width: 250px;
+}
+.fz20 {
+    font-size: 20px;
+}
+.fw400{
+    font-weight: 400;
+}
+.ls10px {
+    letter-spacing: 10px;
+}
 .Container1 {
-    width: 400px;
-    height: 1000px;
+    color:white;
+    margin: 0px;
+    padding-top: 20px;
+    width: 30%;
+    height: 1200px;
     display: flex;
     flex-direction: column;
-    background: url("../photos/big.png");
+    align-items: center;
+    background: 0 0/100% 100% no-repeat url("../photos/big.png");
+    > img {
+        width: 250px;
+        height: 250px;
+        border: 1rem solid white;
+        border-radius: 10px;
+        margin: 3px;
+    }
+    div{
+        padding-top: 45px;
+    }
+    li {
+        padding-top: 30px;
+    }
+    li > h3, h4, p{
+        padding-top: 5px;
+    }
+    .Contacts img {
+        width: 30px;
+        height: 30px;
+        margin: 0px 15px;
+    }
+    .Contacts div{
+        display: flex;
+        padding-top: 15px;
+    }
+    .Contacts h3 {
+        margin: auto 0px;
+        text-align: center;
+        align-items: center;
+    }
+    
+    .skills h2{ 
+        padding-bottom: 20px;
+    }
+    .skills {
+        margin-top: 15px;
+    }
+    .skills h3 {
+        padding-top: 10px;
+        display: flex;
+        justify-content: space-between;
+    }    
+}
+.Container1:after{
+    content: "";
+    display: block;
+    position: relative;
+    left:50%;
+    bottom: 90%;
+    background: url("../photos/треугольник.png") no-repeat;
+    background-position: left 100% bottom 100%; 
+    width: 120px;
+    height: 150px;
+    border-radius: 0px 0px 0px 80%;
 }
 .Container2 {
-    width: 66%;
+    width: 70%;
+    height: 1200px;
+    color: grey;
+    padding-left: 0%;
+    .name {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 50px 10px 100px 0px;
+        background-color: rgb(243, 243, 242);
+        border-radius: 0% 0% 70% 20%;
+    }
+    .name_P{ 
+        width: 50%;
+        text-align: left;
+        text-transform: capitalize;
+        font-size: 26px;
+    }   h1{
+        width: 50%;
+        text-align: left;
+        color: black;
+        font-size: 46px;
+        span{
+            font-weight: bold;
+        }
+    }
+  
+    .main {
+        width: 60%;
+        margin: auto;
+        padding: 70px 0px 0px 0px;
+    }
+    .main > div {
+        padding: 20px 0px;
+    }
+    .workexp > div > div {display: flex;
+        justify-content: space-between;
+    }
+    .about_me p{
+        line-height: 1.7;
+        padding: 25px 0px 0px 0px;
+    }
+    .about_me p:after{
+        content: "";
+        display: block;
+        width: 100%;
+        height: 1px;
+        background-color: grey;
+        margin: 45px 0px 5px;
+    }
+    .workexp div {
+        padding: 20px 0px 10px 0px;
+    }
+    .workexp h3 {
+        padding: 0px 0px 15px 0px;
+    }
+    .social {
+        display: flex;
+        justify-content: flex-end;
+        width: 100%;
+        text-align: right;
+    }
+    .social p {padding: 10px 0px;}
+    .icon-fb,
+    .icon-linkidin,
+    .icon-Twitter {
+       font-size: 30px;
+       padding: 0px 15px;
+    }
+    a {
+        text-decoration: none;
+        font-size: 26px;
+        display: block;
+        width: 100%;
+        text-align: end;
+    }
+    a:hover {
+        color: grey;
+    }
+    a:focus {
+        color:darkgray;
+    }
+  
 }
