--- a/src/2nd.scss
+++ b/src/2nd.scss
@@ -84,7 +84,9 @@
         margin: 10px 0px;
     }
     .recomendationsh2 {
-        margin: 15px 0px 15px 7.5%;
+        margin: 15px 0px 15px 0%;
+        position: relative;
+        left: 7.6%;
     }
     .recomendations h3 {
         margin: 10px 0px;
